2011-03-10 arne

	* new font face kStrikethroughFace (thanks to Bick Tick for this)
	* new class CString which holds a platform representation of a UTF8String.
		The CDrawContext class has one CString so that the platform code does not need to convert a string twice when drawing
		the string into a rectangle

2011-03-09 arne

	* CNewFileSelector implementation for Windows XP (thanks to Bick Tick for the implementation)
	* UTF8StringHelper optimization (only use malloc if more than 128 UTF-8 characters or 64 UTF-16 charachters needs to be translated)
	* fix drawing issue with Wavelab 7 on Windows (WS_EX_TRANSPARENT is now only set when the parent window has WS_EX_LAYERED style set)
	* the RGNDATA allocation in WM_PAINT on Windows is now only done when the size of this structure changes, otherwise the memory block will be remembered.
	* fix file drop on Windows (thanks to Bick Tick to fix this)
	
2011-03-06 arne

	* fix CFrame::getViewAt(..) returning wrong view in modal mode
	* use a template class for the view iterator

2011-03-04 arne

	* add CDrawContext::createRoundRectGraphicsPath(..) method (thanks to Big Tick for contribution)
	* add CGraphicsPath::addRoundRect(..)
	* fix quartz graphics path addArc method

2011-03-03 arne
	
	* new static bool CView::kDirtyCallAlwaysOnMainThread. When this is set to true a call to CView::setDirty(true) will
	  call CView::invalidRect (size) instead of setting the dirty flag. This can fix redraw issues for overlapping views, but
	  you must make sure that you never call setDirty() from any other thread than the main thread. The default value is false to
	  maintain the old behavior.
	* fix: a CScrollView does not write it's subviews to the UIDescription.
	* a CScrollView will now automatically resize it's container size if it has only one child view and this view was resized.
	* the default animation classes are now inherited from CBaseObject.
	* new view container class : CSplitView (documentation will follow)