@@ -23,7 +23,6 @@ The main focus while developing this version was on compatibility with VST SDK 3
 And there is stuff currently not implemented or not working:
 - on Windows when Direct2D is used, all arc drawing methods are not yet implemented
 - on Windows when GDI+ is used, line style is not yet implemented
-- on Windows XP the file selector is not implemented yet.
 - on Mac OS X, when target OS version is 10.4 some of the graphics path methods are not implemented and never will. You will see a compiler warning which ones are not implemented.
 - on Mac OS X, Carbon non composited windows are not working
 
